styled: correct spacing for research

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -574,7 +574,7 @@ nav:hover {
             color: #071D27;
             font-weight: 300;
             font-size: 1.085rem;
-            width: 94%;
+            width: 85%;
             vertical-align: center !important;
         }
 }
